not want to trigger

--- a/.github/workflows/ci-cd-pipeline-full.yml
+++ b/.github/workflows/ci-cd-pipeline-full.yml
@@ -9,9 +9,9 @@ name: CI/CD Pipeline - Azure App Service with Blue-Green & Canary Deployments
 # - Manual trigger → Allows on-demand workflow execution
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main1 ]
   push:
-    branches: [ main ]
+    branches: [ main1 ]
   workflow_dispatch:
 
 # Global environment variables available to all jobs
