--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches: [ main ]
   push:
-    branches: [ main ]
+    branches: [ main, testbranch ]
   workflow_dispatch:
 
 # Global environment variables available to all jobs
@@ -59,11 +59,39 @@ jobs:
           echo "ACR_USERNAME=$ACR_USERNAME" >> $GITHUB_OUTPUT
           echo "ACR_PASSWORD=$ACR_PASSWORD" >> $GITHUB_OUTPUT
 
+  # ===== TESTING =====
+  testing:
+    name: Run All Tests
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Unit Tests
+        run: npm run test:unit
+
+      - name: Run Contract Tests
+        run: npm run test:contract
+
+      - name: Run ESLint
+        run: npm run lint
+
   # ===== BUILD IRON IMAGE =====
   build-iron:
     name: Build Iron Image (Development)
     runs-on: ubuntu-latest
-    needs: setup
+    needs: testing
 
     steps:
       - name: Checkout code
