--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -129,6 +129,7 @@ jobs:
     name: Build Bronze Image (QA)
     runs-on: ubuntu-latest
     needs: build-iron
+    environment: qa
 
     steps:
       - name: Checkout code
@@ -166,6 +167,7 @@ jobs:
     name: Build Silver Image (Integration)
     runs-on: ubuntu-latest
     needs: build-bronze
+    environment: integration
 
     steps:
       - name: Checkout code
@@ -203,6 +205,7 @@ jobs:
     name: Build Gold Image (Staging)
     runs-on: ubuntu-latest
     needs: build-silver
+    environment: staging
 
     steps:
       - name: Checkout code
@@ -242,6 +245,7 @@ jobs:
     name: Build Platinum Image (Production)
     runs-on: ubuntu-latest
     needs: build-gold
+    environment: production
 
     steps:
       - name: Checkout code
