--- a/.github/workflows/ci-cd-pipeline-tests.yml
+++ b/.github/workflows/ci-cd-pipeline-tests.yml
@@ -1,6 +1,6 @@
-# CI/CD Pipeline workflow for automated testing and deployment
+# CI/CD Pipeline workflow for automated testing and deployment to Azure App Service
 # This pipeline implements the PwC DevOps diagram with multi-stage builds and progressive deployment strategies
-name: CI/CD Pipeline - JFrog Artifactory with Blue-Green & Canary Deployments
+name: CI/CD Pipeline - Azure App Service with Blue-Green & Canary Deployments
 
 # When this workflow triggers:
 # - Pull requests to main/develop branches → Run fast tests (DEV + QA)
@@ -11,12 +11,12 @@ on:
   pull_request:
     branches: [ main ]
   push:
-    branches: [ main, testbranch ]
+    branches: [ main ]
   workflow_dispatch:
 
 # Global environment variables available to all jobs
 env:
-  JFROG_REGISTRY: ${{ secrets.JFROG_REGISTRY }}
+  REGISTRY: ghcr.io
   IMAGE_TAG: ${{ github.sha }}           # Use git commit SHA as unique image tag
   IMAGE_NAME: ${{ github.repository }}
 
@@ -59,6 +59,8 @@ jobs:
       contents: read
       packages: write
     outputs:
+      acr-username: ${{ steps.acr-creds.outputs.ACR_USERNAME }}
+      acr-password: ${{ steps.acr-creds.outputs.ACR_PASSWORD }}
       image-name: ${{ steps.image-name.outputs.name }}
 
     steps:
@@ -72,12 +74,19 @@ jobs:
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           echo "name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure Container Registry
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials
+        id: acr-creds
+        run: |
+          az acr update -n ${{ secrets.ACR_NAME }} --admin-enabled true
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo "ACR_USERNAME=$ACR_USERNAME" >> $GITHUB_OUTPUT
+          echo "ACR_PASSWORD=$ACR_PASSWORD" >> $GITHUB_OUTPUT
 
   # ===== BUILD IRON IMAGE =====
   build-iron:
@@ -93,12 +102,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Set lowercase image name
         run: echo "IMAGE_NAME_LOWER=$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -109,7 +122,7 @@ jobs:
           context: .
           target: iron
           push: true
-          tags: ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:iron-${{ env.IMAGE_TAG }}
+          tags: ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:iron-${{ env.IMAGE_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -127,12 +140,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Set lowercase image name
         run: echo "IMAGE_NAME_LOWER=$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -143,7 +160,7 @@ jobs:
           context: .
           target: bronze
           push: true
-          tags: ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:bronze-${{ env.IMAGE_TAG }}
+          tags: ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:bronze-${{ env.IMAGE_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -192,12 +209,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Set lowercase image name
         run: echo "IMAGE_NAME_LOWER=$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -208,7 +229,7 @@ jobs:
           context: .
           target: silver
           push: true
-          tags: ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:silver-${{ env.IMAGE_TAG }}
+          tags: ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:silver-${{ env.IMAGE_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -293,12 +314,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Set lowercase image name
         run: echo "IMAGE_NAME_LOWER=$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -310,8 +335,8 @@ jobs:
           target: gold
           push: true
           tags: |
-            ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:gold-${{ env.IMAGE_TAG }}
-            ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:gold-latest
+            ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:gold-${{ env.IMAGE_TAG }}
+            ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:gold-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -329,12 +354,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to JFrog Artifactory
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.JFROG_REGISTRY }}
-          username: ${{ secrets.JFROG_USERNAME }}
-          password: ${{ secrets.JFROG_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Set lowercase image name
         run: echo "IMAGE_NAME_LOWER=$(echo ${{ env.IMAGE_NAME }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -346,8 +375,8 @@ jobs:
           target: platinum
           push: true
           tags: |
-            ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:platinum-${{ env.IMAGE_TAG }}
-            ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:platinum-latest
-            ${{ secrets.JFROG_REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}:latest
+            ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:platinum-${{ env.IMAGE_TAG }}
+            ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:platinum-latest
+            ${{ secrets.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME_LOWER }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
